2014-03-09  Martin Rudalics  <rudalics@gmx.at>

	* elisp.texi (Top): Rename section "Width" to "Size of Displayed
	Text".
	* text.texi (Primitive Indent):
	* strings.texi (String Basics):
	* sequences.texi (Sequence Functions): Update references
	accordingly.
	* display.texi (Size of Displayed Text): Rename section from
	"Width".  Add description for `window-text-pixel-size'.
	(Window Dividers): Reword description of window dividers.
	* frames.texi (Layout Parameters): Improve description of window
	divider parameters.
	* windows.texi (Window Sizes): Add descriptions of
	`window-mode-line-height' and `window-header-line-height'.
	(Coordinates and Windows): Mention window dividers.

2014-03-07  Martin Rudalics  <rudalics@gmx.at>

	* buffers.texi (The Buffer List): Rename node to Buffer List.
	Describe `buffer-list-update-hook'.
	* elisp.texi (Top): "The Buffer List" renamed to "Buffer List".
	Add node for Window Dividers.
	* hooks.texi (Standard Hooks): Add reference to
	`buffer-list-update-hook'.
	* windows.texi (Window Sizes): Describe `window-min-size'.
	(Splitting Windows): Update description of `split-window'.
	(Selecting Windows): Update description of `select-window'.

2014-03-06  Martin Rudalics  <rudalics@gmx.at>

	* frames.texi (Size and Position): Rewrite entries for
	`fit-frame-to-buffer' and `fit-frame-to-buffer-margins'.  Add
	description for `fit-frame-to-buffer-sizes'.
	* windows.texi (Resizing Windows): Add descriptions for
	pixelwise resizing.  Add entries for `window-resize-pixelwise'
	and `fit-window-to-buffer-horizontally'.  Rewrite
	`fit-window-to-buffer' entry.

2014-03-06  Xue Fuqiao  <xfq@gnu.org>

	* internals.texi (Window Internals): Remove field `region_showing'.

2014-03-06  Glenn Morris  <rgm@gnu.org>

	* searching.texi (Replacing Match):
	Remove incorrect, uninteresting return value.  (Bug#16942)

2014-03-05  Martin Rudalics  <rudalics@gmx.at>

	* display.texi (Window Dividers): New section.